// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerPhoneEdit displays a passed customerPhone object correctly 1`] = `
<div
  className=""
  key="row12"
>
  <EditModelRow
    className=""
    model={
      Object {
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
    modelFields={
      Array [
        Object {
          "error": "Please select an option.",
          "fieldName": "number_type",
          "header": "Type",
          "required": true,
          "selectList": Array [
            Object {
              "isDefault": true,
              "name": "Home",
              "value": "H",
            },
            Object {
              "name": "Work",
              "value": "M",
            },
            Object {
              "name": "Mobile",
              "value": "W",
            },
          ],
          "type": "select_one",
        },
        Object {
          "error": "A value is required.",
          "fieldName": "telephone",
          "header": "Telephone",
          "length": 60,
          "required": true,
          "size": 20,
          "type": "text",
        },
        Object {
          "fieldName": "preferred",
          "header": "Preferred",
          "type": "checkbox",
        },
        Object {
          "fieldName": "add_date",
          "header": "Date Added",
          "readOnly": true,
          "type": "date_time",
        },
        Object {
          "fieldName": "upd_date",
          "header": "Date Updated",
          "readOnly": true,
          "type": "date_time",
        },
      ]
    }
    onChange={[Function]}
    persistedModel={
      Object {
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
  />
  <div
    className="grid-item align_center"
    id="actions_12"
    key="actions_12"
  >
    <ModelEditIcons
      componentKey={12}
      model={
        Object {
          "id": 12,
          "number_type": "H",
          "telephone": "78736",
        }
      }
      modelReset={[Function]}
    />
  </div>
</div>
`;

exports[`CustomerPhoneEdit displays a passed customerPhone object correctly when an error is present 1`] = `
<div
  className="error"
  key="row12"
>
  <EditModelRow
    className=""
    model={
      Object {
        "error": true,
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
    modelFields={
      Array [
        Object {
          "error": "Please select an option.",
          "fieldName": "number_type",
          "header": "Type",
          "required": true,
          "selectList": Array [
            Object {
              "isDefault": true,
              "name": "Home",
              "value": "H",
            },
            Object {
              "name": "Work",
              "value": "M",
            },
            Object {
              "name": "Mobile",
              "value": "W",
            },
          ],
          "type": "select_one",
        },
        Object {
          "error": "A value is required.",
          "fieldName": "telephone",
          "header": "Telephone",
          "length": 60,
          "required": true,
          "size": 20,
          "type": "text",
        },
        Object {
          "fieldName": "preferred",
          "header": "Preferred",
          "type": "checkbox",
        },
        Object {
          "fieldName": "add_date",
          "header": "Date Added",
          "readOnly": true,
          "type": "date_time",
        },
        Object {
          "fieldName": "upd_date",
          "header": "Date Updated",
          "readOnly": true,
          "type": "date_time",
        },
      ]
    }
    onChange={[Function]}
    persistedModel={
      Object {
        "error": true,
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
  />
  <div
    className="grid-item align_center"
    id="actions_12"
    key="actions_12"
  >
    <ModelEditIcons
      componentKey={12}
      model={
        Object {
          "error": true,
          "id": 12,
          "number_type": "H",
          "telephone": "78736",
        }
      }
      modelReset={[Function]}
    />
  </div>
</div>
`;
